compilador.output
Terminals unused in grammar

    IF
    THEN
    ELSE
    WHILE
    DO
    FOR
    GOTO
    ARRAY
    FUNCTION
    PROCEDURE
    LABEL
    TYPE


State 27 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 $@3: %empty

    5 bloco: $@2 parte_declara_vars $@3 comando_composto

    6 parte_declara_vars: var

    7 $@4: %empty

    8 var: $@4 VAR declara_vars
    9    | %empty

   10 declara_vars: declara_vars declara_var
   11             | declara_var

   12 declara_var: lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

   13 tipo: IDENT

   14 lista_id_var: lista_id_var VIRGULA IDENT
   15             | IDENT

   16 lista_idents: lista_idents VIRGULA IDENT
   17             | IDENT

   18 $@5: %empty

   19 comando_composto: T_BEGIN $@5 comandos T_END

   20 comandos: comando
   21         | comando comandos

   22 comando: comando_sem_rotulo

   23 comando_sem_rotulo: %empty
   24                   | atribuicao

   25 $@6: %empty

   26 $@7: %empty

   27 atribuicao: IDENT $@6 T_ATRIBUICAO expressao $@7 PONTO_E_VIRGULA

   28 expressao: expressao_simples
   29          | expressao_simples relacao expressao_simples

   30 relacao: MAIOR_OU_IGUAL
   31        | MENOR_OU_IGUAL
   32        | MAIOR_QUE
   33        | MENOR_QUE
   34        | IGUAL
   35        | DIFERENTE

   36 expressao_simples: MAIS termo complemento_termo
   37                  | MENOS termo complemento_termo
   38                  | termo complemento_termo

   39 complemento_termo: %empty
   40                  | MAIS termo complemento_termo
   41                  | MENOS termo complemento_termo
   42                  | OR termo complemento_termo

   43 $@8: %empty

   44 termo: fator $@8 complemento_fator

   45 complemento_fator: %empty
   46                  | MULTIPLICA fator complemento_fator
   47                  | DIVIDE fator complemento_fator
   48                  | AND fator complemento_fator

   49 $@9: %empty

   50 fator: $@9 variavel
   51      | NUMERO
   52      | ABRE_PARENTESES expressao FECHA_PARENTESES
   53      | NOT fator

   54 $@10: %empty

   55 variavel: $@10 IDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2 52
    FECHA_PARENTESES (260) 2 52
    VIRGULA (261) 14 16
    PONTO_E_VIRGULA (262) 2 12 27
    DOIS_PONTOS (263) 12
    PONTO (264) 2
    T_BEGIN (265) 19
    T_END (266) 19
    VAR (267) 8
    IDENT (268) 2 13 14 15 16 17 27 55
    T_ATRIBUICAO (269) 27
    NUMERO (270) 51
    MAIS (271) 36 40
    MENOS (272) 37 41
    DIVIDE (273) 47
    MULTIPLICA (274) 46
    IF (275)
    THEN (276)
    ELSE (277)
    WHILE (278)
    DO (279)
    FOR (280)
    GOTO (281)
    AND (282) 48
    OR (283) 42
    NOT (284) 53
    ARRAY (285)
    FUNCTION (286)
    PROCEDURE (287)
    LABEL (288)
    TYPE (289)
    MAIOR_QUE (290) 32
    MENOR_QUE (291) 33
    IGUAL (292) 34
    DIFERENTE (293) 35
    MAIOR_OU_IGUAL (294) 30
    MENOR_OU_IGUAL (295) 31


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    programa (42)
        on left: 2
        on right: 0
    $@1 (43)
        on left: 1
        on right: 2
    bloco (44)
        on left: 5
        on right: 2
    $@2 (45)
        on left: 3
        on right: 5
    $@3 (46)
        on left: 4
        on right: 5
    parte_declara_vars (47)
        on left: 6
        on right: 5
    var (48)
        on left: 8 9
        on right: 6
    $@4 (49)
        on left: 7
        on right: 8
    declara_vars (50)
        on left: 10 11
        on right: 8 10
    declara_var (51)
        on left: 12
        on right: 10 11
    tipo (52)
        on left: 13
        on right: 12
    lista_id_var (53)
        on left: 14 15
        on right: 12 14
    lista_idents (54)
        on left: 16 17
        on right: 2 16
    comando_composto (55)
        on left: 19
        on right: 5
    $@5 (56)
        on left: 18
        on right: 19
    comandos (57)
        on left: 20 21
        on right: 19 21
    comando (58)
        on left: 22
        on right: 20 21
    comando_sem_rotulo (59)
        on left: 23 24
        on right: 22
    atribuicao (60)
        on left: 27
        on right: 24
    $@6 (61)
        on left: 25
        on right: 27
    $@7 (62)
        on left: 26
        on right: 27
    expressao (63)
        on left: 28 29
        on right: 27 52
    relacao (64)
        on left: 30 31 32 33 34 35
        on right: 29
    expressao_simples (65)
        on left: 36 37 38
        on right: 28 29
    complemento_termo (66)
        on left: 39 40 41 42
        on right: 36 37 38 40 41 42
    termo (67)
        on left: 44
        on right: 36 37 38 40 41 42
    $@8 (68)
        on left: 43
        on right: 44
    complemento_fator (69)
        on left: 45 46 47 48
        on right: 44 46 47 48
    fator (70)
        on left: 50 51 52 53
        on right: 44 46 47 48 53
    $@9 (71)
        on left: 49
        on right: 50
    variavel (72)
        on left: 55
        on right: 50
    $@10 (73)
        on left: 54
        on right: 55


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   17 lista_idents: IDENT .

    $default  reduce using rule 17 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   16 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   16 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    $default  reduce using rule 3 ($@2)

    bloco  go to state 13
    $@2    go to state 14


State 12

   16 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 16 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 15


State 14

    5 bloco: $@2 . parte_declara_vars $@3 comando_composto

    T_BEGIN   reduce using rule 9 (var)
    $default  reduce using rule 7 ($@4)

    parte_declara_vars  go to state 16
    var                 go to state 17
    $@4                 go to state 18


State 15

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


State 16

    5 bloco: $@2 parte_declara_vars . $@3 comando_composto

    $default  reduce using rule 4 ($@3)

    $@3  go to state 19


State 17

    6 parte_declara_vars: var .

    $default  reduce using rule 6 (parte_declara_vars)


State 18

    8 var: $@4 . VAR declara_vars

    VAR  shift, and go to state 20


State 19

    5 bloco: $@2 parte_declara_vars $@3 . comando_composto

    T_BEGIN  shift, and go to state 21

    comando_composto  go to state 22


State 20

    8 var: $@4 VAR . declara_vars

    IDENT  shift, and go to state 23

    declara_vars  go to state 24
    declara_var   go to state 25
    lista_id_var  go to state 26


State 21

   19 comando_composto: T_BEGIN . $@5 comandos T_END

    $default  reduce using rule 18 ($@5)

    $@5  go to state 27


State 22

    5 bloco: $@2 parte_declara_vars $@3 comando_composto .

    $default  reduce using rule 5 (bloco)


State 23

   15 lista_id_var: IDENT .

    $default  reduce using rule 15 (lista_id_var)


State 24

    8 var: $@4 VAR declara_vars .
   10 declara_vars: declara_vars . declara_var

    IDENT  shift, and go to state 23

    $default  reduce using rule 8 (var)

    declara_var   go to state 28
    lista_id_var  go to state 26


State 25

   11 declara_vars: declara_var .

    $default  reduce using rule 11 (declara_vars)


State 26

   12 declara_var: lista_id_var . DOIS_PONTOS tipo PONTO_E_VIRGULA
   14 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 29
    DOIS_PONTOS  shift, and go to state 30


State 27

   19 comando_composto: T_BEGIN $@5 . comandos T_END

    IDENT  shift, and go to state 31

    IDENT     [reduce using rule 23 (comando_sem_rotulo)]
    $default  reduce using rule 23 (comando_sem_rotulo)

    comandos            go to state 32
    comando             go to state 33
    comando_sem_rotulo  go to state 34
    atribuicao          go to state 35


State 28

   10 declara_vars: declara_vars declara_var .

    $default  reduce using rule 10 (declara_vars)


State 29

   14 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 36


State 30

   12 declara_var: lista_id_var DOIS_PONTOS . tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 37

    tipo  go to state 38


State 31

   27 atribuicao: IDENT . $@6 T_ATRIBUICAO expressao $@7 PONTO_E_VIRGULA

    $default  reduce using rule 25 ($@6)

    $@6  go to state 39


State 32

   19 comando_composto: T_BEGIN $@5 comandos . T_END

    T_END  shift, and go to state 40


State 33

   20 comandos: comando .
   21         | comando . comandos

    IDENT  shift, and go to state 31

    T_END     reduce using rule 20 (comandos)
    T_END     [reduce using rule 23 (comando_sem_rotulo)]
    IDENT     [reduce using rule 23 (comando_sem_rotulo)]
    $default  reduce using rule 20 (comandos)

    comandos            go to state 41
    comando             go to state 33
    comando_sem_rotulo  go to state 34
    atribuicao          go to state 35


State 34

   22 comando: comando_sem_rotulo .

    $default  reduce using rule 22 (comando)


State 35

   24 comando_sem_rotulo: atribuicao .

    $default  reduce using rule 24 (comando_sem_rotulo)


State 36

   14 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 14 (lista_id_var)


State 37

   13 tipo: IDENT .

    $default  reduce using rule 13 (tipo)


State 38

   12 declara_var: lista_id_var DOIS_PONTOS tipo . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 42


State 39

   27 atribuicao: IDENT $@6 . T_ATRIBUICAO expressao $@7 PONTO_E_VIRGULA

    T_ATRIBUICAO  shift, and go to state 43


State 40

   19 comando_composto: T_BEGIN $@5 comandos T_END .

    $default  reduce using rule 19 (comando_composto)


State 41

   21 comandos: comando comandos .

    $default  reduce using rule 21 (comandos)


State 42

   12 declara_var: lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA .

    $default  reduce using rule 12 (declara_var)


State 43

   27 atribuicao: IDENT $@6 T_ATRIBUICAO . expressao $@7 PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    MAIS             shift, and go to state 46
    MENOS            shift, and go to state 47
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    expressao          go to state 49
    expressao_simples  go to state 50
    termo              go to state 51
    fator              go to state 52
    $@9                go to state 53


State 44

   52 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    MAIS             shift, and go to state 46
    MENOS            shift, and go to state 47
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    expressao          go to state 54
    expressao_simples  go to state 50
    termo              go to state 51
    fator              go to state 52
    $@9                go to state 53


State 45

   51 fator: NUMERO .

    $default  reduce using rule 51 (fator)


State 46

   36 expressao_simples: MAIS . termo complemento_termo

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    termo  go to state 55
    fator  go to state 52
    $@9    go to state 53


State 47

   37 expressao_simples: MENOS . termo complemento_termo

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    termo  go to state 56
    fator  go to state 52
    $@9    go to state 53


State 48

   53 fator: NOT . fator

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    fator  go to state 57
    $@9    go to state 53


State 49

   27 atribuicao: IDENT $@6 T_ATRIBUICAO expressao . $@7 PONTO_E_VIRGULA

    $default  reduce using rule 26 ($@7)

    $@7  go to state 58


State 50

   28 expressao: expressao_simples .
   29          | expressao_simples . relacao expressao_simples

    MAIOR_QUE       shift, and go to state 59
    MENOR_QUE       shift, and go to state 60
    IGUAL           shift, and go to state 61
    DIFERENTE       shift, and go to state 62
    MAIOR_OU_IGUAL  shift, and go to state 63
    MENOR_OU_IGUAL  shift, and go to state 64

    $default  reduce using rule 28 (expressao)

    relacao  go to state 65


State 51

   38 expressao_simples: termo . complemento_termo

    MAIS   shift, and go to state 66
    MENOS  shift, and go to state 67
    OR     shift, and go to state 68

    $default  reduce using rule 39 (complemento_termo)

    complemento_termo  go to state 69


State 52

   44 termo: fator . $@8 complemento_fator

    $default  reduce using rule 43 ($@8)

    $@8  go to state 70


State 53

   50 fator: $@9 . variavel

    $default  reduce using rule 54 ($@10)

    variavel  go to state 71
    $@10      go to state 72


State 54

   52 fator: ABRE_PARENTESES expressao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 73


State 55

   36 expressao_simples: MAIS termo . complemento_termo

    MAIS   shift, and go to state 66
    MENOS  shift, and go to state 67
    OR     shift, and go to state 68

    $default  reduce using rule 39 (complemento_termo)

    complemento_termo  go to state 74


State 56

   37 expressao_simples: MENOS termo . complemento_termo

    MAIS   shift, and go to state 66
    MENOS  shift, and go to state 67
    OR     shift, and go to state 68

    $default  reduce using rule 39 (complemento_termo)

    complemento_termo  go to state 75


State 57

   53 fator: NOT fator .

    $default  reduce using rule 53 (fator)


State 58

   27 atribuicao: IDENT $@6 T_ATRIBUICAO expressao $@7 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 76


State 59

   32 relacao: MAIOR_QUE .

    $default  reduce using rule 32 (relacao)


State 60

   33 relacao: MENOR_QUE .

    $default  reduce using rule 33 (relacao)


State 61

   34 relacao: IGUAL .

    $default  reduce using rule 34 (relacao)


State 62

   35 relacao: DIFERENTE .

    $default  reduce using rule 35 (relacao)


State 63

   30 relacao: MAIOR_OU_IGUAL .

    $default  reduce using rule 30 (relacao)


State 64

   31 relacao: MENOR_OU_IGUAL .

    $default  reduce using rule 31 (relacao)


State 65

   29 expressao: expressao_simples relacao . expressao_simples

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    MAIS             shift, and go to state 46
    MENOS            shift, and go to state 47
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    expressao_simples  go to state 77
    termo              go to state 51
    fator              go to state 52
    $@9                go to state 53


State 66

   40 complemento_termo: MAIS . termo complemento_termo

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    termo  go to state 78
    fator  go to state 52
    $@9    go to state 53


State 67

   41 complemento_termo: MENOS . termo complemento_termo

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    termo  go to state 79
    fator  go to state 52
    $@9    go to state 53


State 68

   42 complemento_termo: OR . termo complemento_termo

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    termo  go to state 80
    fator  go to state 52
    $@9    go to state 53


State 69

   38 expressao_simples: termo complemento_termo .

    $default  reduce using rule 38 (expressao_simples)


State 70

   44 termo: fator $@8 . complemento_fator

    DIVIDE      shift, and go to state 81
    MULTIPLICA  shift, and go to state 82
    AND         shift, and go to state 83

    $default  reduce using rule 45 (complemento_fator)

    complemento_fator  go to state 84


State 71

   50 fator: $@9 variavel .

    $default  reduce using rule 50 (fator)


State 72

   55 variavel: $@10 . IDENT

    IDENT  shift, and go to state 85


State 73

   52 fator: ABRE_PARENTESES expressao FECHA_PARENTESES .

    $default  reduce using rule 52 (fator)


State 74

   36 expressao_simples: MAIS termo complemento_termo .

    $default  reduce using rule 36 (expressao_simples)


State 75

   37 expressao_simples: MENOS termo complemento_termo .

    $default  reduce using rule 37 (expressao_simples)


State 76

   27 atribuicao: IDENT $@6 T_ATRIBUICAO expressao $@7 PONTO_E_VIRGULA .

    $default  reduce using rule 27 (atribuicao)


State 77

   29 expressao: expressao_simples relacao expressao_simples .

    $default  reduce using rule 29 (expressao)


State 78

   40 complemento_termo: MAIS termo . complemento_termo

    MAIS   shift, and go to state 66
    MENOS  shift, and go to state 67
    OR     shift, and go to state 68

    $default  reduce using rule 39 (complemento_termo)

    complemento_termo  go to state 86


State 79

   41 complemento_termo: MENOS termo . complemento_termo

    MAIS   shift, and go to state 66
    MENOS  shift, and go to state 67
    OR     shift, and go to state 68

    $default  reduce using rule 39 (complemento_termo)

    complemento_termo  go to state 87


State 80

   42 complemento_termo: OR termo . complemento_termo

    MAIS   shift, and go to state 66
    MENOS  shift, and go to state 67
    OR     shift, and go to state 68

    $default  reduce using rule 39 (complemento_termo)

    complemento_termo  go to state 88


State 81

   47 complemento_fator: DIVIDE . fator complemento_fator

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    fator  go to state 89
    $@9    go to state 53


State 82

   46 complemento_fator: MULTIPLICA . fator complemento_fator

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    fator  go to state 90
    $@9    go to state 53


State 83

   48 complemento_fator: AND . fator complemento_fator

    ABRE_PARENTESES  shift, and go to state 44
    NUMERO           shift, and go to state 45
    NOT              shift, and go to state 48

    $default  reduce using rule 49 ($@9)

    fator  go to state 91
    $@9    go to state 53


State 84

   44 termo: fator $@8 complemento_fator .

    $default  reduce using rule 44 (termo)


State 85

   55 variavel: $@10 IDENT .

    $default  reduce using rule 55 (variavel)


State 86

   40 complemento_termo: MAIS termo complemento_termo .

    $default  reduce using rule 40 (complemento_termo)


State 87

   41 complemento_termo: MENOS termo complemento_termo .

    $default  reduce using rule 41 (complemento_termo)


State 88

   42 complemento_termo: OR termo complemento_termo .

    $default  reduce using rule 42 (complemento_termo)


State 89

   47 complemento_fator: DIVIDE fator . complemento_fator

    DIVIDE      shift, and go to state 81
    MULTIPLICA  shift, and go to state 82
    AND         shift, and go to state 83

    $default  reduce using rule 45 (complemento_fator)

    complemento_fator  go to state 92


State 90

   46 complemento_fator: MULTIPLICA fator . complemento_fator

    DIVIDE      shift, and go to state 81
    MULTIPLICA  shift, and go to state 82
    AND         shift, and go to state 83

    $default  reduce using rule 45 (complemento_fator)

    complemento_fator  go to state 93


State 91

   48 complemento_fator: AND fator . complemento_fator

    DIVIDE      shift, and go to state 81
    MULTIPLICA  shift, and go to state 82
    AND         shift, and go to state 83

    $default  reduce using rule 45 (complemento_fator)

    complemento_fator  go to state 94


State 92

   47 complemento_fator: DIVIDE fator complemento_fator .

    $default  reduce using rule 47 (complemento_fator)


State 93

   46 complemento_fator: MULTIPLICA fator complemento_fator .

    $default  reduce using rule 46 (complemento_fator)


State 94

   48 complemento_fator: AND fator complemento_fator .

    $default  reduce using rule 48 (complemento_fator)
